add gc viewer note